[gd_scene load_steps=17 format=2]

[ext_resource path="res://LevelEditor/EditorObject.gd" type="Script" id=1]
[ext_resource path="res://LevelEditor/ObjectsSelect.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Map.gd" type="Script" id=3]
[ext_resource path="res://Tilesets/CollisionsTileset.tres" type="TileSet" id=4]
[ext_resource path="res://Tilesets/GroundTileset.tres" type="TileSet" id=5]
[ext_resource path="res://Tilesets/FolliageShadowsTileset.tres" type="TileSet" id=6]
[ext_resource path="res://Tilesets/FolliageTileset.tres" type="TileSet" id=7]
[ext_resource path="res://Tilesets/Decoration.tres" type="TileSet" id=8]
[ext_resource path="res://LevelEditor/FileDialog.gd" type="Script" id=9]
[ext_resource path="res://LevelEditor/Writer.gd" type="Script" id=10]
[ext_resource path="res://PixelArt/Attack/Attack.png" type="Texture" id=11]
[ext_resource path="res://Tilesets/BuildingsTileset.tres" type="TileSet" id=12]
[ext_resource path="res://Tilesets/HillsTileset.tres" type="TileSet" id=13]
[ext_resource path="res://Characters/Player/Player.tscn" type="PackedScene" id=17]
[ext_resource path="res://Camera_Effects/Camera2D.tscn" type="PackedScene" id=20]

[sub_resource type="CircleShape2D" id=1]
radius = 12.0

[node name="LevelEditor" type="Node2D"]

[node name="Edit" type="Node2D" parent="."]

[node name="Level" type="Node2D" parent="Edit"]
script = ExtResource( 3 )
map_name = "LevelEditor"
map_path_name = "LevelEditor"
show_name = false

[node name="Camera2D" parent="Edit/Level" instance=ExtResource( 20 )]
position = Vector2( 152, 208 )

[node name="Tilesets" type="Node2D" parent="Edit/Level"]
pause_mode = 2

[node name="Ground" type="TileMap" parent="Edit/Level/Tilesets"]
tile_set = ExtResource( 5 )
cell_size = Vector2( 16, 16 )
collision_mask = 0
format = 1

[node name="Decoration" type="TileMap" parent="Edit/Level/Tilesets"]
tile_set = ExtResource( 8 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="Hills" type="TileMap" parent="Edit/Level/Tilesets"]
scale = Vector2( 2, 2 )
tile_set = ExtResource( 13 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="Ramps" type="Node2D" parent="Edit/Level/Tilesets/Hills"]

[node name="Collisions" type="TileMap" parent="Edit/Level/Tilesets"]
tile_set = ExtResource( 4 )
cell_size = Vector2( 24, 24 )
collision_mask = 0
format = 1

[node name="NPC_Paths" type="Node2D" parent="Edit/Level"]

[node name="World" type="YSort" parent="Edit/Level"]

[node name="Buildings" type="TileMap" parent="Edit/Level/World"]
tile_set = ExtResource( 12 )
cell_size = Vector2( 16, 16 )
cell_tile_origin = 2
cell_y_sort = true
collision_mask = 0
format = 1

[node name="Bridges" type="YSort" parent="Edit/Level/World"]

[node name="Checkpoints" type="YSort" parent="Edit/Level/World"]

[node name="Houses" type="YSort" parent="Edit/Level/World"]

[node name="Entities" type="YSort" parent="Edit/Level/World"]

[node name="Characters" type="YSort" parent="Edit/Level/World/Entities"]

[node name="Player" parent="Edit/Level/World/Entities/Characters" instance=ExtResource( 17 )]
visible = false
position = Vector2( 152, 208 )

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Edit/Level/World/Entities/Characters/Player"]
remote_path = NodePath("../../../../../Camera2D")

[node name="ItemsDrop" type="YSort" parent="Edit/Level/World"]
pause_mode = 2

[node name="Environment" type="YSort" parent="Edit/Level/World"]
z_index = 1

[node name="Objects" type="YSort" parent="Edit/Level/World"]

[node name="SceneChangerTriggers" type="YSort" parent="Edit/Level/World"]

[node name="FolliageShadows" type="TileMap" parent="Edit/Level"]
scale = Vector2( 1.1, 1.1 )
tile_set = ExtResource( 6 )
cell_size = Vector2( 24, 24 )
format = 1

[node name="ParallaxBackground" type="ParallaxBackground" parent="Edit/Level"]
layer = 90
scale = Vector2( 1.1, 1.1 )
transform = Transform2D( 1.1, 0, 0, 1.1, 0, 0 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="Edit/Level/ParallaxBackground"]
scale = Vector2( 1.1, 1.1 )

[node name="Folliage" type="TileMap" parent="Edit/Level/ParallaxBackground/ParallaxLayer"]
tile_set = ExtResource( 7 )
cell_size = Vector2( 24, 24 )
format = 1

[node name="EditorObject" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="MouseCursor" type="Sprite" parent="EditorObject"]
offset = Vector2( 0, -15 )

[node name="ObjectDetector" type="Area2D" parent="EditorObject"]
collision_mask = 1048575

[node name="CollisionShape2D" type="CollisionShape2D" parent="EditorObject/ObjectDetector"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="EditorObject/ObjectDetector"]
modulate = Color( 1, 0, 0, 0.607843 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 11 )

[node name="ObjectsSelect" parent="." instance=ExtResource( 2 )]

[node name="FileDialog" type="FileDialog" parent="ObjectsSelect"]
visible = true
margin_left = 160.0
margin_top = 24.0
margin_right = 600.0
margin_bottom = 504.0
rect_scale = Vector2( 0.6, 0.6 )
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Writer" type="Control" parent="ObjectsSelect"]
pause_mode = 2
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ObjectsSelect/Writer"]
margin_left = 1.58923
margin_top = 3.70813
margin_right = 63.5892
margin_bottom = 17.7081
text = "Object ID"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="ObjectsSelect/Writer"]
margin_left = 1.39581
margin_top = 19.0674
margin_right = 67.3958
margin_bottom = 46.0674
text = "000"
align = 1
max_length = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CameraContainer" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="CameraContainer"]

[connection signal="body_entered" from="EditorObject/ObjectDetector" to="EditorObject" method="_on_ObjectDetector_body_entered"]
[connection signal="confirmed" from="ObjectsSelect/FileDialog" to="EditorObject" method="_on_FileDialog_confirmed"]
[connection signal="hide" from="ObjectsSelect/FileDialog" to="EditorObject" method="_on_FileDialog_hide"]

[editable path="Edit/Level/Camera2D"]
